--- a/style.css
+++ b/style.css
@@ -1,62 +1,46 @@
 body {
-    background-color: black;
-    color: white;
-    font-family: Arial, sans-serif;
-    text-align: center;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-  }
+  background-color: black;
+  color: white;
+  font-family: Arial, sans-serif;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+}
 
-  img {
-    margin-bottom: 80px;
-    width: 250px;
-  }
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
 
-  h1 {
-    font-size: 24px;
-    margin-bottom: 20px;
-  }
+img {
+  margin-bottom: 80px;
+  width: 250px;
+}
 
-  button {
-    margin-top: 20px;
-  }
-  
-  .form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 20px;
-  }
-  
-  label {
-    margin-bottom: 5px;
-  }
-  
-  input[type="number"],
-  button {
-    padding: 10px;
-    border: 1px solid gray;
-    background-color: black;
-    color:white;
-    border-radius: 5px;
-    margin-bottom: 10px;
-    width: 200px;
-  }
-  
-  button {
-    background-color: black;
-    color: white;
-  }
-  
-  #result {
-    font-size: 18px;
-  }
-  
+input[type="text"] {
+  width: 200px;
+  padding: 10px;
+  border-radius: 10px;
+  margin-top: 10px;
+  border: 1px solid gray;
+  background-color: black;
+  color: white;
+}
+
+button {
+  padding: 10px 20px;
+  background-color: #000000;
+  border: 1px solid gray;
+  color: white;
+  border-radius: 10px;
+  margin-top: 20px;
+  cursor: pointer;
+}
+
+#result-container {
+  margin-top: 30px;
+  font-size: 13px;
+}
